update AutoAnchor.java
- rewrote radius calculations
- overall fixed some stuff

add mathUtils.java

improved autoTrap.java

- fixed bugs